--- a/templates/add.html
+++ b/templates/add.html
@@ -6,6 +6,11 @@
     <title>Add Expense</title>
 </head>
 <body>
+    {% extends "base.html" %}
+
+    {% block title %}Add Expense{% endblock %}
+
+    {% block content %}
     <h1>Add an Expense</h1>
     <form method="POST">
         <label for="amount">Amount:</label>
@@ -14,5 +19,18 @@
         <input type="text" id="description" name="description" required><br>
         <button type="submit">Add Expense</button>
     </form>
+    {% endblock %}
+    
+    <h1>Add an Expense</h1>
+    <form method="POST">
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" name="amount" step="0.01" required><br>
+        <label for="description">Description:</label>
+        <input type="text" id="description" name="description" required><br>
+        <button type="submit">Add Expense</button>
+    </form>
+
+
+
 </body>
 </html>
