--- a/static/style.css
+++ b/static/style.css
@@ -59,3 +59,57 @@ button {
 button:hover {
     background-color: #2e6631;
 }
+
+.flash-messages {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    padding: 10px;
+    margin: 20px auto;
+    width: 80%;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.button {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.button:hover{
+    background-color: #0056b3;
+}
+
+.chart-container {
+    flex 1;
+    width: 45%;
+    max-width: 45%; /* Adjust size to fit 2 charts side by side */
+    margin: 20px auto;
+    display: inline-block;
+    text-align: center;
+}
+
+.charts-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 20px auto;
+    width: 100%;
+}
+
+canvas {
+    width: 100% !important; /* Ensures canvas respects container size */
+    height: auto !important; /* Keeps aspect ratio */
+}
+
+.chart-container canvas {
+    max-height: 700px;
+}
