--- a/templates/add.html
+++ b/templates/add.html
@@ -17,20 +17,13 @@
         <input type="number" id="amount" name="amount" step="0.01" required><br>
         <label for="description">Description:</label>
         <input type="text" id="description" name="description" required><br>
+        <label for="category">Category:</label>
+        <input type="text" id="category" name="category" required><br>
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" required><br>
         <button type="submit">Add Expense</button>
     </form>
     {% endblock %}
     
-    <h1>Add an Expense</h1>
-    <form method="POST">
-        <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" step="0.01" required><br>
-        <label for="description">Description:</label>
-        <input type="text" id="description" name="description" required><br>
-        <button type="submit">Add Expense</button>
-    </form>
-
-
-
 </body>
 </html>
