--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,6 +9,10 @@
     <input type="number" id="amount" name="amount" step="0.01" value="{{ expense[0] }}" required><br>
     <label for="description">Description:</label>
     <input type="text" id="description" name="description" value="{{ expense[1] }}" required><br>
+    <label for="category">Category:</label>
+    <input type="text" id="category" name="category" value="{{ expense[2] }}" required><br>
+    <label for="date">Date:</label>
+    <input type="date" id="date" name="date" value="{{ expense[3] }}" required><br>
     <button type="submit">Save Changes</button>
 </form>
 {% endblock %}
