--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,22 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Track and Manage Your Expenses!</h1>
-<p>Use the navigation bar above to add an expense or view Expense History with a total</p>
+<div class="centered-container">
+    <h1>Track and Manage Your Expenses!</h1>
+    <p><b>Use the navigation bar above to:</b></p>
+    <p><b>Add an expense:</b> Add an expense along with a category and date</p>
+    <p><b>View Expenses:</b> See all your expense history in a row and also be able to:</p>
+    <p>
+        - filter your expenses based on category or date<br>
+        - export your expenses to another program as a CSV<br>
+        - edit/delete previously entered expenses
+    </p>
+    <p><b>View Dashboard:</b></p>
+    <p>
+        - Pulls up a convenient set of graphs<br>
+        - First chart is a pie graph of expenses by category<br>
+        - Second is a line chart of expenses over time
+    </p>
+</div>
 {% endblock %}
+
