--- a/templates/add.html
+++ b/templates/add.html
@@ -11,19 +11,37 @@
     {% block title %}Add Expense{% endblock %}
 
     {% block content %}
-    <h1>Add an Expense</h1>
-    <form method="POST">
-        <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" step="0.01" required><br>
-        <label for="description">Description:</label>
-        <input type="text" id="description" name="description" required><br>
-        <label for="category">Category:</label>
-        <input type="text" id="category" name="category" required><br>
-        <label for="date">Date:</label>
-        <input type="date" id="date" name="date" required><br>
-        <button type="submit">Add Expense</button>
-    </form>
-    {% endblock %}
-    
+    <div class="centered-container">
+        <h1>Add an Expense</h1>
+        <form method="POST">
+            <div class="form-group">
+                <label for="amount">Amount:</label>
+                <input type="number" id="amount" name="amount" step="0.01" required>
+            </div>
+
+            <div class="form-group">
+                <label for="description">Description:</label>
+                <input type="text" id="description" name="description" required>
+            </div>
+
+            <div class="form-group">
+                <label for="category">Category:</label>
+                <input list="category-list" id="category" name="category">
+                <datalist id="category-list">
+                    {% for category in categories %}
+                    <option value="{{ category }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+
+            <div class="form-group">
+                <label for="date">Date:</label>
+                <input type="date" id="date" name="date" required>
+            </div>
+
+            <button type="submit">Add Expense</button>
+        </form>
+    </div>
+    {% endblock %}    
 </body>
 </html>
